# Fin

./: .clinerules  .env.example  .eslintrc.cjs  .gitignore  README.md  TODO.md  package-lock.json  package.json
backend/: alembic.ini  config.py  database.py  main.py  pyproject.toml  seed.py
backend/agents/: __init__.py  base.py  debt.py  investment.py  retirement.py
backend/agents/prompts/: __init__.py  retirement.py
backend/alembic/: env.py
backend/alembic/versions/: 8f6ece4a8642_initial.py
backend/auth/: dependencies.py  jwt.py  router.py  schemas.py
backend/integrations/: alpaca.py  alpaca_data.py  check_in.py  finnhub.py  plaid.py  scheduler.py  upstash.py
backend/middleware/: error_handler.py  rate_limiter.py  security_headers.py
backend/models/: __init__.py  backtest.py  community.py  debt.py  execution.py  memory.py  portfolio.py  recommendation.py  refresh.py  retirement.py  settings.py  user.py
backend/routers/: backtest.py  community.py  data.py  debt.py  execution.py  integrations.py  memory.py  orchestration.py  portfolio.py  recommendations.py  retirement.py  settings.py
backend/services/: agent_orchestrator.py  backtest_engine.py  benchmarks.py  cache_invalidation.py  confidence.py  context_builder.py  debt_calculator.py  execution_tracker.py  follow_through.py  input_sanitizer.py  memory_bridge.py  plaid_integration.py  portfolio_sync.py  readiness_scorer.py  recalculation.py  recommendation_engine.py  refresh_gate.py  retirement_projection.py  retry_handler.py  scheduler.py  structured_output.py
backend/utils/: encryption.py
(+504 files in other folders)
