[project]
name = "fin-backend"
version = "0.1.0"
description = "Fin — AI-powered personal finance platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "email-validator>=2.2.0",
    "slowapi>=0.1.9",
    "alpaca-py>=0.36.0",
    "cryptography>=44.0.0",
    "apscheduler>=3.11.0",
    "ollama>=0.4.0",
    "instructor>=1.7.0",
    "numpy>=2.0.0",
    "finnhub-python>=2.4.0",
    "upstash-redis>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]